Change a little photo on preloader + increase time of preloader rotating from 1.5s to 2,5s. Delete form property "height" to fix button START loading on iPhone 6.

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body{
 .list-of-players_item{
     font-family: 'Cinzel', serif;
     font-size: 15px;
-    height: 62px;
+    margin-bottom: 41.5px;
     margin-right: 30px;
 }
 .content-container{
@@ -187,6 +187,7 @@ body{
     .list-of-players_item{
         font-size: 14px;
         margin-right: 15px;
+        margin-bottom: 44px;
     }
     .for-my-boys{
         top: 80%;
